--- a/AloTraWebsite/src/main/resources/templates/layouts/default_layout.html
+++ b/AloTraWebsite/src/main/resources/templates/layouts/default_layout.html
@@ -18,6 +18,7 @@
 
     <!-- Chat Widget CSS -->
     <link rel="stylesheet" th:href="@{/css/chat-widget.css}">
+     <link rel="stylesheet" href="/alotra-website/css/order-history.css">
 </head>
 
 <!-- Header -->
