--- a/AloTraWebsite/src/main/resources/templates/layouts/shipper_layout.html
+++ b/AloTraWebsite/src/main/resources/templates/layouts/shipper_layout.html
@@ -248,7 +248,7 @@ document.getElementById("logoutBtn").addEventListener("click", () => {
     window.location.href = "/alotra-website/login";
 });
 </script>
-
+<script src="/alotra-website/js/global-modal.js"></script>
 <th:block th:if="${additionalJs != null}" th:replace="${additionalJs}"></th:block>
 </body>
 </html>
