--- a/AloTraWebsite/src/main/resources/templates/layouts/admin-layout.html
+++ b/AloTraWebsite/src/main/resources/templates/layouts/admin-layout.html
@@ -227,6 +227,7 @@
 	<!-- Bootstrap -->
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="/alotra-website/js/global-modal.js"></script>
 
 	<!-- Sidebar Toggle -->
 	<script>
