--- a/AloTraWebsite/src/main/resources/templates/promotions/detail.html
+++ b/AloTraWebsite/src/main/resources/templates/promotions/detail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layouts/default_layout :: body(content=~{::content}, additionalJs=~{::additionalJs})}">
+      th:replace="~{layouts/default_layout :: layout(pageTitle='Chi tiết khuyến mãi', content=~{::content}, additionalJs=~{::additionalJs})}">
 
 <th:block th:fragment="content">
 
